files/landing/landing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elarreglador-landing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elarreglador.eu
        - www.elarreglador.eu
      secretName: elarreglador-eu-tls
  rules:
    - host: elarreglador.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: www.elarreglador.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
